--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,11 +24,11 @@
 </style>
 
 <body>
-    <form action="send" method="POST" id="sendEmail-form">
+    <form action="/" method="POST" id="sendEmail-form">
         <h1>Send email form</h1>
         <div class="mb-3">
             <label for="name" class="form-label">Name :</label>
-            <input type="text" class="form-control" id="name" aria-describedby="nameHelp" />
+            <input type="text" name="name" class="form-control" id="name" aria-describedby="nameHelp" />
         </div>
 
         <!-- <div class="mb-3">
@@ -38,12 +38,12 @@
 
         <div class="mb-3">
             <label for="subject" class="form-label">Subject :</label>
-            <input class="form-control" type="text" placeholder="Subject" aria-label="default input example" id="subject" />
+            <input class="form-control" type="text" placeholder="Subject" aria-label="default input example" id="subject" name="subject" />
         </div>
 
         <div class="mb-3">
             <label for="content" class="form-label">Body :</label>
-            <textarea class="form-control" id="content" rows="3"></textarea>
+            <textarea class="form-control" id="content" name="content" rows="3"></textarea>
         </div>
 
         <!-- <div class="mb-3">
@@ -55,7 +55,6 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="../index.js"></script>
 </body>
 
 </html>
