data with for and to email input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,11 +52,11 @@
             <textarea class="form-control" id="content" name="content" rows="3"></textarea>
         </div>
 
-        <!-- <div class="mb-3">
+        <div class="mb-3">
             <label for="attchment" class="form-label">Attachment(if any):</label>
 
             <input type="file" class="form-control" id="attchment" name="attachment" aria-describedby="inputGroupFileAddon04" aria-label="Upload" />
-        </div> -->
+        </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
